--- a/style.css
+++ b/style.css
@@ -296,4 +296,54 @@ a {
     font-size: 14px;
     font-weight: 400;
     color: #667085;
+    width: 100%;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 36px;
+    font-weight: 600;
+    color: #101828;
+    margin-top: 92px;
+}
+
+footer p:first-child {
+    font-size: 20px;
+    font-weight: 400;
+    color: #667085;
+}
+
+footer p:last-child {
+    font-size: 16px;
+    font-weight: 400;
+    color: #98A2B3;
+    margin: 32px 0 96px 0;
+}
+
+
+.rodape {
+    background-color: #F9FAFB;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 96px;
+}
+
+.form {
+    display: flex;
+    gap: 16px;
+}
+
+
+.form input {
+    border: 1px solid #D0D5DD;
+    border-radius: 8px;
+    padding: 11px 14px 11px 16px;
+    width: 360px;
+    height: 24px;
+}
+
+.form button {
+    height: 48px;
 }
